kustomize-apps/whoami/envs/jet/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: whoami
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/whoami`)
      middlewares:
        - name: ip-allowlist-local
          namespace: traefik
        - name: basic-auth-middleware
          namespace: traefik
      services:
        - name: whoami
          port: 80
